--- a/env/.env_global
+++ b/env/.env_global
@@ -40,6 +40,16 @@ export NNN_BMS='h:~/;d:~/Documents'
 export NNN_COLORS='12345'
 export NNN_ARCHIVE='\\.(7z|bz2|gz|tar|tgz|zip)$'
 
+# Less
+export LESS=-R
+export LESS_TERMCAP_mb=$'\E[1;31m'     # begin blink
+export LESS_TERMCAP_md=$'\E[1;36m'     # begin bold
+export LESS_TERMCAP_me=$'\E[0m'        # reset bold/blink
+export LESS_TERMCAP_so=$'\E[01;44;33m' # begin reverse video
+export LESS_TERMCAP_se=$'\E[0m'        # reset reverse video
+export LESS_TERMCAP_us=$'\E[1;32m'     # begin underline
+export LESS_TERMCAP_ue=$'\E[0m'        # reset underline
+
 # Other utils
 export RANGER_RELOAD_RC=FALSE
 export TERMINAL=urxvt
@@ -64,6 +74,9 @@ alias cp='cp -i'
 
 # Regular utils
 alias shit='sudo $(history -p \!\!)'
+alias diff='diff --color=auto'
+alias grep='grep --color=auto'
+
 # VPN
 alias vpnheidelberguni='sudo openconnect -u st0@ix.urz.uni-heidelberg.de vpn-ac.urz.uni-heidelberg.de'
 # Docker with sudo by default
@@ -121,13 +134,8 @@ alias sdisable='sudo systemctl disable'
 #
 
 # Apply wal theme, if any
-if [ -f ~/.cache/wal/sequences ]; then
-    (cat ~/.cache/wal/sequences &)
-fi
-
-if [ -f ~/.cache/wal/colors-tty.sh ]; then
-    source ~/.cache/wal/colors-tty.sh
-fi
+[ -f ~/.cache/wal/sequences ] &&  cat ~/.cache/wal/sequences
+[ -f ~/.cache/wal/colors-tty.sh ] && source ~/.cache/wal/colors-tty.sh
 
 # Add key to keychain
 eval $(keychain --eval $HOME/.ssh/id_rsa)
