--- a/i3/config
+++ b/i3/config
@@ -174,6 +174,7 @@ assign [class="Thunderbird"] $ws3
 #assign [class="URxvt"] $ws1
 assign [class="Eclipse"] $ws4
 assign [class="jetbrains-idea-ce"] $ws4
+assign [class="Skype"] $ws9
 
 # default floating
 for_window [title="alsamixer"] floating enable border normal
