--- a/i3/config
+++ b/i3/config
@@ -50,7 +50,7 @@ bindsym XF86Search exec $HOME/.dotfiles/bin/fmenu -i $HOME -t +10
 bindsym $mod+F8 exec ~/.dotfiles/bin/monitor_off
 
 # reload wal
-bindsym $mod+Shift+y exec wal -R
+bindsym $mod+y exec wal -R
 
 # change focus
 bindsym $mod+h focus left
