--- a/i3/config
+++ b/i3/config
@@ -178,6 +178,7 @@ assign [class="Thunderbird"] $ws3
 assign [class="Eclipse"] $ws4
 assign [class="jetbrains-idea-ce"] $ws4
 assign [class="Skype"] $ws9
+assign [class="Steam"] $ws5
 
 # default floating
 for_window [title="alsamixer"] floating enable border normal
