--- a/i3/config
+++ b/i3/config
@@ -41,7 +41,7 @@ bindsym $mod+Shift+minus move scratchpad
 bindsym $mod+minus scratchpad show
 
 # start dmenu
-bindsym $mod+d exec dmenu_run -l 10 -nb "#000" -nf "#888" -sb "#01a252" -sf "#fff"
+bindsym $mod+d exec $HOME/.dotfiles/bin/dmen
 # start fmenu (search home)
 bindsym $mod+shift+d exec $HOME/.dotfiles/bin/fmenu -i $HOME -t +10
 bindsym XF86Search exec $HOME/.dotfiles/bin/fmenu -i $HOME -t +10
@@ -181,27 +181,27 @@ assign [class="Skype"] $ws9
 assign [class="Steam"] $ws5
 
 # default floating
-for_window [title="alsamixer"] floating enable border normal
-for_window [class="Blueman-manager"] floating enable border normal
-for_window [class="GParted"] floating enable border normal
-for_window [class="Lxappearance"] floating enable sticky enable border normal
-for_window [class="qt5ct"] floating enable sticky enable border normal
-for_window [class="Qtconfig-qt4"] floating enable sticky enable border normal
-for_window [class="Skype"] floating enable border normal
-for_window [class="Grub-customizer"] floating enable border normal
-for_window [title="Volume Control"] floating enable border normal
-for_window [class="Gsimplecal"] floating enable border normal
-for_window [class="Arandr"] floating enable border normal
-for_window [class="Nemo"] floating enable border normal
-for_window [class="Gaia Sky"] floating enable border normal
-for_window [class="obs"] floating enable border normal
-for_window [title="deusex.exe"] floating enable border normal
-for_window [title="megasync"] floating enable border normal
-for_window [class="timeanalysis.py"] floating enable border normal
+for_window [class="Lxappearance"] floating enable sticky enable
+for_window [class="qt5ct"] floating enable sticky enable
+for_window [class="Qtconfig-qt4"] floating enable sticky enable
+for_window [title="alsamixer"] floating enable
+for_window [class="Blueman-manager"] floating enable
+for_window [class="GParted"] floating enable
+for_window [class="Skype"] floating enable
+for_window [class="Grub-customizer"] floating enable
+for_window [title="Volume Control"] floating enable
+for_window [class="Gsimplecal"] floating enable
+for_window [class="Arandr"] floating enable
+for_window [class="Nemo"] floating enable
+for_window [class="Gaia Sky"] floating enable
+for_window [class="obs"] floating enable
+for_window [title="deusex.exe"] floating enable
+for_window [title="megasync"] floating enable
+for_window [class="timeanalysis.py"] floating enable
 for_window [class="Yad"] floating enable
-for_window [title="Blender User Preferences"] floating enable border normal
-for_window [title="Blender Preferences"] floating enable border normal
-for_window [class="uk-ac-starlink-topcat-Driver"] floating enable border normal
+for_window [title="Blender User Preferences"] floating enable
+for_window [title="Blender Preferences"] floating enable
+for_window [class="uk-ac-starlink-topcat-Driver"] floating enable
 
 
 # reload the configuration file
