feat: alias cl to 'cd  && ls'

--- a/env/.env_global
+++ b/env/.env_global
@@ -76,6 +76,11 @@ alias cp='cp -i'
 alias shit='sudo $(history -p \!\!)'
 alias diff='diff --color=auto'
 alias grep='grep --color=auto'
+alias wifi='nmtui'
+cl () {
+    cd $1
+    ls
+}
 
 # VPN
 alias vpnheidelberguni='sudo openconnect -u st0@ix.urz.uni-heidelberg.de vpn-ac.urz.uni-heidelberg.de'
