Add yt audio play with mpv to qtb

--- a/env/.env_dpac
+++ b/env/.env_dpac
@@ -31,6 +31,8 @@ export CATGEN_HOME="$WS/DPAC/CU3/software/CatGen/Trunk"
 # FL specific library path
 export JAVA_LIBRARY_PATH="${SOFWORKSPACE}/netlib.so/"
 
+# gbinreader
+export PATH="$HOME/Programs/gbinreader/gbinreader-1.6/bin:$PATH"
 
 # Jenkins
 #export JENKINS_HOME="$HOME/work/Gaia/Jenkins"
