--- a/i3/config
+++ b/i3/config
@@ -206,6 +206,7 @@ for_window [class="Yad"] floating enable
 for_window [title="Blender User Preferences"] floating enable
 for_window [title="Blender Preferences"] floating enable
 for_window [class="uk-ac-starlink-topcat-Driver"] floating enable
+for_window [class="audacity"] floating enable
 
 
 # reload the configuration file
