--- a/polybar/config
+++ b/polybar/config
@@ -61,9 +61,10 @@ module-margin-right = 1
 
 font-0 = "xos4 Terminus:style=Bold:size=13;0"
 font-1 = "Liberation Mono:size=10;1"
-font-2 = "Font Awesome 5 Free:style=Regular:size=10;2"
-font-3 = "Font Awesome 5 Free:style=Solid:size=10;3"
-font-4 = "Font Awesome 5 Brands:style=Regular:size=10;4"
+font-2 = "Symbols Nerd Font:style=Regular:size=10;2"
+font-3 = "Font Awesome 5 Free:style=Regular:size=10;2"
+font-4 = "Font Awesome 5 Free:style=Solid:size=10;3"
+font-5 = "Font Awesome 5 Brands:style=Regular:size=10;4"
 
 modules-left = i3 
 modules-center = xwindow-short
@@ -98,9 +99,10 @@ modules-center = xwindow
 
 font-0 = "MiscFixed:style=Bold:size=20;0"
 font-1 = "DejaVu Sans:size=20;1"
-font-2 = "Font Awesome 5 Free:style=Regular:size=14;2"
-font-3 = "Font Awesome 5 Free:style=Solid:size=14;3"
-font-4 = "Font Awesome 5 Brands:style=Regular:size=14;4"
+font-2 = "Symbols Nerd Font:style=Regular:size=10;2"
+font-3 = "Font Awesome 5 Free:style=Regular:size=14;2"
+font-4 = "Font Awesome 5 Free:style=Solid:size=14;3"
+font-5 = "Font Awesome 5 Brands:style=Regular:size=14;4"
 
 ; same as bar-hidpi but it shows ubuntu updates instead of arch
 [bar/bar-hidpi-ubuntu]
@@ -162,7 +164,7 @@ interval = 10
 type = custom/script
 exec = ~/.config/polybar/scripts/memory.sh
 click-left = ~/.config/polybar/scripts/memory.sh --popup
-format-prefix = " "
+format-prefix = " "
 format-prefix-foreground = ${colors.one}
 format-underline = ${colors.one}
 
@@ -293,14 +295,14 @@ pin-workspaces = true
 ; ws-icon-[0-9]+ = label;icon
 ; NOTE: The label needs to match the name of the i3 workspace
 ws-icon-0 = 1;
-ws-icon-1 = 2;
-ws-icon-2 = 3;
-ws-icon-3 = 4;
+ws-icon-1 = 2;
+ws-icon-2 = 3;﫯
+ws-icon-3 = 4;
 ws-icon-4 = 5;
-ws-icon-5 = 6;
+ws-icon-5 = 6;
 ws-icon-6 = 7;
-ws-icon-7 = 8;
-ws-icon-8 = 9;
+ws-icon-7 = 8;
+ws-icon-8 = 9;履
 ws-icon-9 = 10; 
 
 fuzzy-match = true
@@ -377,7 +379,7 @@ bar-empty = ─
 
 [module/nm-launcher]
 type = custom/text
-content = 
+content = ﯱ
 content-foreground = ${colors.two}
 click-left = urxvt -e nmtui-connect
 
