--- a/polybar/config
+++ b/polybar/config
@@ -514,7 +514,7 @@ full-at = 98
 format-charging = <animation-charging> <label-charging>
 format-charging-underline = ${colors.one}
 
-format-discharging = <animation-discharging> <label-discharging>
+format-discharging = <ramp-capacity> <label-discharging>
 format-discharging-underline = ${self.format-charging-underline}
 
 format-full-prefix = " "
@@ -526,8 +526,10 @@ label-discharging = %percentage%
 label-full = %percentage%
 
 ramp-capacity-0 = 
-ramp-capacity-1 = 
-ramp-capacity-2 = 
+ramp-capacity-1 = 
+ramp-capacity-2 = 
+ramp-capacity-3 = 
+ramp-capacity-4 = 
 ramp-capacity-foreground = ${colors.foreground-alt}
 
 animation-charging-0 =  
