--- a/polybar/config
+++ b/polybar/config
@@ -354,11 +354,10 @@ format = <ramp> <label>
 label = %percentage%%
 
 ; Only applies if <ramp> is used
-ramp-0 =  
-ramp-1 = 
-ramp-2 = 
-ramp-3 = 
-ramp-4 = 
+ramp-0 =  
+ramp-1 = 
+ramp-2 = 
+ramp-3 = 
 
 format-underline = #ddd
 ;ramp-0-underline = #333
