--- a/polybar/config
+++ b/polybar/config
@@ -211,7 +211,7 @@ type = custom/script
 
 exec = ~/.config/polybar/scripts/updates-arch.sh
 format = <label>
-format-prefix = " "
+format-prefix = " "
 format-prefix-foreground = ${colors.one}
 label = %output%
 interval = 300
@@ -223,7 +223,7 @@ type = custom/script
 
 exec = ~/.config/polybar/scripts/updates-ubuntu.sh
 format = <label>
-format-prefix = " "
+format-prefix = " "
 format-prefix-foreground = ${colors.one}
 label = %output%
 interval = 300
@@ -234,7 +234,7 @@ click-left = urxvt -e sudo apt upgrade
 type = internal/xkeyboard
 blacklist-0 = num lock
 blacklist-1 = caps lock
-format-prefix = " "
+format-prefix = " "
 format-prefix-foreground = ${colors.two}
 format-prefix-underline = ${colors.two}
 
