--- a/env/.env_dpac
+++ b/env/.env_dpac
@@ -23,6 +23,7 @@ export FL_TR="$WS/DPAC/CU3/software/FL/Trunk"
 export FL_HOME=$FL_TR
 export FL_22="$WS/DPAC/CU3/software/FL/R_22.0.x"
 export CATGEN_HOME="$WS/DPAC/CU3/software/CatGen/Trunk"
+export GLE_TOP="$HOME/Programs/gle-4.2.2"
 
 # Java Installation
 
