--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -20,7 +20,8 @@
     lgb = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset%n' --abbrev-commit --date=relative --branches
     pushall = !"git remote | xargs -L1 git push --all"
 [core]
-	autocrlf = false
+    autocrlf = input
+    eol = lf
 [diff]
     tool = vimdiff
 [merge]
@@ -28,6 +29,3 @@
 
 [commit]
 	gpgsign = true
-
-[auto]
-    crlf = input
