--- a/env/.env_global
+++ b/env/.env_global
@@ -52,8 +52,8 @@ export LESS_TERMCAP_ue=$'\E[0m'        # reset underline
 
 # Other utils
 export RANGER_RELOAD_RC=FALSE
-export TERMINAL=urxvt
-export TERM=rxvt-256color
+export TERMINAL=termite
+export TERM=xterm-termite
 export BROWSER=qutebrowser
 export EDITOR=nvim
 GPG_TTY=$(tty)
