--- a/termite/config
+++ b/termite/config
@@ -6,7 +6,9 @@
 #cell_width_scale = 1.0
 #clickable_url = true
 #dynamic_title = true
-font = Terminus (TTF), Terminus 12
+font = Monospace 9
+font = Terminus 12
+font = Terminus (TTF) 12
 #fullscreen = true
 #icon_name = terminal
 #mouse_autohide = false
