Battery full icon

--- a/polybar/config
+++ b/polybar/config
@@ -524,7 +524,7 @@ format-charging-underline = ${colors.one}
 format-discharging = <ramp-capacity> <label-discharging>
 format-discharging-underline = ${self.format-charging-underline}
 
-format-full-prefix = " "
+format-full-prefix = " "
 format-full-prefix-foreground = ${colors.foreground-alt}
 format-full-underline = ${self.format-charging-underline}
 
