--- a/i3/config
+++ b/i3/config
@@ -327,7 +327,7 @@ exec_always --no-startup-id "feh --bg-fill /home/tsagrista/Pictures/wallpaper.jp
 exec_always --no-startup-id xset r rate 200 35 # initial delay 300 ms, repeat 35 ms
 
 # Keyboard layouts
-exec_always "setxkbmap -model pc104 -layout us,es -variant ,cat -option grp:alt_shift_toggle"
+exec_always "setxkbmap -model pc104 -layout us,es -variant ,cat -option 'grp:alt_space_toggle'"
 
 #
 # TRACKPAD  - Dell XPS13 
