--- a/i3/config
+++ b/i3/config
@@ -181,6 +181,7 @@ assign [class="jetbrains-idea-ce"] $ws4
 assign [class="Skype"] $ws9
 assign [class="zoom"] $ws9
 assign [class="telegram-desktop"] $ws9
+assign [class="Signal"] $ws9
 assign [class="Steam"] $ws5
 
 # default floating
