--- a/env/.env_global
+++ b/env/.env_global
@@ -133,4 +133,6 @@ alias sdisable='sudo systemctl disable'
 # Add key to keychain
 eval $(keychain --eval $HOME/.ssh/id_rsa)
 
+# Clear screen, show info
 clear
+neofetch
