add weather function

--- a/env/.env_global
+++ b/env/.env_global
@@ -122,6 +122,11 @@ alias sstop='sudo systemctl stop'
 alias senable='sudo systemctl enable'
 alias sdisable='sudo systemctl disable'
 
+# Weather
+weather(){
+    curl https://wttr.in/$1\?1Fn
+}
+
 #
 # ENVIRONMENT INIT
 #
