--- a/env/.env_global
+++ b/env/.env_global
@@ -131,6 +131,9 @@ weather(){
 # ENVIRONMENT INIT
 #
 
+# Completion
+[[ ! -f ~/.dotfiles/zshrc/completion.zsh ]] || source ~/.dotfiles/zshrc/completion.zsh
+
 # Apply wal theme, if any
 [ -f ~/.cache/wal/sequences ] &&  cat ~/.cache/wal/sequences
 [ -f ~/.cache/wal/colors-tty.sh ] && source ~/.cache/wal/colors-tty.sh
