none: switch capslk and esc

--- a/i3/config
+++ b/i3/config
@@ -331,7 +331,11 @@ exec_always --no-startup-id "feh --bg-fill /home/tsagrista/Pictures/wallpaper.jp
 exec_always --no-startup-id xset r rate 200 35 # initial delay 300 ms, repeat 35 ms
 
 # Keyboard layouts
-exec_always "setxkbmap -model pc104 -layout us,es -variant ,cat -option 'grp:alt_space_toggle'"
+exec "setxkbmap -model pc104"
+exec "setxkbmap -layout us,es"
+exec "setxkbmap -option 'grp:alt_space_toggle'"
+# Switch escape and capslock
+exec "setx_kbmap -option 'caps:swapescape'"
 
 #
 # TRACKPAD  - Dell XPS13 
