--- a/env/.env_dpac
+++ b/env/.env_dpac
@@ -2,7 +2,7 @@
 
 export DOCWORKSPACE="$HOME/Workspaces/IDEA-ws"
 export SOFWORKSPACE="$HOME/Workspaces/IDEA-ws"
-export WS="$SOFWORKSPACE"
+export WS=$SOFWORKSPACE
 
 # LaTeX Environment for Gaia Documents
 
@@ -17,26 +17,27 @@ export TEXMFLOCAL="${DOCCOMMON}/texmf/"
 
 export SOFCOMMON="${SOFWORKSPACE}/DPAC/CU1/software/common"
 #export ANT_HOME=`readlink -f /usr/bin/ant | sed "s:bin/ant::"`
-export ANT_HOME="$HOME/Workspaces/IDEA-ws/DPAC/CU1/software/common/apache-ant-1.10.5"
+export ANT_HOME=/home/tsagrista/Workspaces/IDEA-ws/DPAC/CU1/software/common/apache-ant-1.10.5
 
-export FL_TR="$WS/DPAC/CU3/software/FL/Trunk"
+export CU3=$WS/DPAC/CU3/software/
+export FL_TR=$CU3/FL/Trunk
 export FL_HOME=$FL_TR
-export FL_22="$WS/DPAC/CU3/software/FL/R_22.0.x"
-export CATGEN_HOME="$WS/DPAC/CU3/software/CatGen/Trunk"
-export GLE_TOP="$HOME/Programs/gle-4.2.2"
+export FL_22=$CU3/FL/R_22.0.x
+export CATGEN_HOME=$CU3/CatGen/Trunk
+export FLSE=$CU3/FLSE
 
 # Java Installation
 
-#export DERBY_HOME=`readlink -f /usr/bin/java | sed "s:jre/bin/java::"`db/
+export DERBY_HOME=`readlink -f /usr/bin/java | sed "s:jre/bin/java::"`db/
 
 # FL specific library path
+
 export JAVA_LIBRARY_PATH="${SOFWORKSPACE}/netlib.so/"
 
-# gbinreader
-export PATH="$HOME/Programs/gbinreader/gbinreader-1.6/bin:$PATH"
 
 # Jenkins
-#export JENKINS_HOME="$HOME/work/Gaia/Jenkins"
+
+export JENKINS_HOME="$HOME/work/Gaia/Jenkins"
 
 alias dpce='ssh -x -A -F $HOME/.ssh/config gaiaro.n1data.lan'
 function dpcecp() { scp -F $HOME/.ssh/config gaiaro.n1data.lan:$*; }
