--- a/i3/config
+++ b/i3/config
@@ -333,12 +333,8 @@ exec_always --no-startup-id feh --bg-fill /home/tsagrista/Pictures/wallpaper.jpg
 # Repeat interval and delay
 exec_always --no-startup-id xset r rate 200 35 # initial delay 300 ms, repeat 35 ms
 
-# Keyboard layouts
-exec --no-startup-id setxkbmap -model pc104
-exec --no-startup-id setxkbmap -layout us,es
-exec --no-startup-id setxkbmap -option 'grp:alt_space_toggle'
-# Switch escape and capslock
-exec --no-startup-id setxkbmap -option 'caps:swapescape'
+# Keyboard layout definition. Switch escape and caps lock key
+exec --no-startup-id setxkbmap -model pc104 -layout us,es -option 'grp:alt_space_toggle,caps:swapescape'
 
 #
 # TRACKPAD  - Dell XPS13 
