feat: disable ssh key unlock at startup

--- a/env/.env_global
+++ b/env/.env_global
@@ -135,8 +135,8 @@ weather(){
 [ -f ~/.cache/wal/sequences ] &&  cat ~/.cache/wal/sequences
 [ -f ~/.cache/wal/colors-tty.sh ] && source ~/.cache/wal/colors-tty.sh
 
-# Add key to keychain
-eval $(keychain --eval $HOME/.ssh/id_rsa)
+# Uncomment to unlock ssh key by default (asks for password)
+#eval $(keychain --eval $HOME/.ssh/id_rsa)
 
 # Clear screen, show info
 clear
