--- a/i3/config
+++ b/i3/config
@@ -141,9 +141,19 @@ bindsym $mod+equal exec $HOME/.dotfiles/bin/= --dmenu=dmenu
 bindsym $mod+Shift+u exec $HOME/.dotfiles/bin/dmenuunicode
 
 # WORKSPACES
+#set $ws1 "1 "
+#set $ws2 "2 "
+#set $ws3 "3 﫯"
+#set $ws4 "4 "
+#set $ws5 "5 "
+#set $ws6 "6 "
+#set $ws7 "7 "
+#set $ws8 "8 "
+#set $ws9 "9 "
+#set $ws0 "10 卵"
 set $ws1 "1"
 set $ws2 "2"
-set $ws3 "3"
+set $ws3 "3 "
 set $ws4 "4"
 set $ws5 "5"
 set $ws6 "6"
@@ -373,31 +383,18 @@ exec --no-startup-id udiskie -f "$HOME/.dotfiles/bin/ranger-term" --tray
 # NO SCREENSAVER
 exec --no-startup-id $HOME/.dotfiles/bin/no-screenoff.sh
 
-#
-# BAR (polybar, bumblebee-status, i3status...)
-#
-
 # PYWAL
 exec --no-startup-id wal -a 85 --theme "$HOME/.dotfiles/pywal/themes/dark/vscode.json"
 
+#
+# BAR (polybar, bumblebee-status, i3status...)
+#
 exec_always --no-startup-id $HOME/.dotfiles/bin/polybar-launch
 #bar {
-#    font pango:Terminus (TTF), Terminus, FontAwesome 10 
-#    #status_command     i3status
-#    output              primary
-#    status_command      i3blocks -c $HOME/.config/i3blocks/config-hidalgo
-#    position            top
-#    workspace_buttons   yes
-#    tray_output         yes
-#    separator_symbol    "/"
-#    colors {
-#        separator $wal-bg
-#        background #000000
-#        statusline $wal-fg
-#        focused_workspace $wal-fg $wal-bg #fdf6e3
-#        active_workspace $wal-bg #353535 #fdf6e3
-#        inactive_workspace $inactive-bg-color #000000 #207030
-#        urgent_workspace #d33682 #d33682 #fdf6e3
-#    }
+#  status_command exec $HOME/.dotfiles/i3/status/mybar.sh
+#
+#  position top
+#  tray_output primary
+#  font pango:Terminus 12
+#  font pango:Symbols Nerd Font 10
 #}
-
