--- a/polybar/config
+++ b/polybar/config
@@ -33,7 +33,7 @@ alert = ${xrdb:color1:#bd2c40}
 [bar/bar-fhd]
 monitor = ${env:MONITOR:}
 width = 100%
-height = 25
+height = 20
 ;offset-x = 1%
 ;offset-y = 1%
 radius = 0.0
@@ -59,7 +59,7 @@ padding-right = 1
 module-margin-left = 0
 module-margin-right = 1
 
-font-0 = "xos4 Terminus:style=Bold:size=13;0"
+font-0 = "xos4 Terminus:style=Bold:size=12;0"
 font-1 = "Liberation Mono:size=10;1"
 font-2 = "Symbols Nerd Font:style=Regular:size=10;2"
 font-3 = "Font Awesome 5 Free:style=Regular:size=10;2"
@@ -280,11 +280,11 @@ label-focused-underline= ${colors.one}
 label-focused-padding = 2
 
 label-occupied = %index%
-label-occupied-padding = 2
+label-occupied-padding = 1
 
 label-urgent = %index%!
 label-urgent-background = ${colors.alert}
-label-urgent-padding = 2
+label-urgent-padding = 1
 
 label-empty = %index%
 label-empty-foreground = ${colors.foreground-alt}
@@ -294,7 +294,7 @@ label-empty-padding =
 type = internal/i3
 format = <label-state> <label-mode>
 index-sort = true
-wrapping-scroll = false
+wrapping-scroll = true
 
 ; Only show workspaces on the same output as the bar
 pin-workspaces = true
@@ -316,18 +316,18 @@ ws-icon-9 = 10;卵
 fuzzy-match = true
 
 label-mode = %mode%
-label-mode-padding = 3
+label-mode-padding = 1
 label-mode-foreground = #000
 label-mode-background = ${colors.two}
 
 ; focused = Active workspace on focused monitor
-label-focused = %index% %icon%
+label-focused = %index%: %icon%
 label-focused-background = ${module/bspwm.label-focused-background}
 label-focused-underline = ${colors.two}
 label-focused-padding = ${module/bspwm.label-focused-padding}
 
 ; unfocused = Inactive workspace on any monitor
-label-unfocused = %index% %icon%
+label-unfocused = %index%: %icon%
 label-unfocused-padding = ${module/bspwm.label-occupied-padding}
 
 ; visible = Active workspace on unfocused monitor
