--- a/termite/config
+++ b/termite/config
@@ -22,7 +22,7 @@ scrollback_lines = 10000
 #hyperlinks = false
 
 # $BROWSER is used by default if set, with xdg-open as a fallback
-#browser = xdg-open
+browser = qutebrowser
 
 # "system", "on" or "off"
 #cursor_blink = system
