feat: env_dpac update

--- a/env/.env_dpac
+++ b/env/.env_dpac
@@ -1,3 +1,5 @@
+export SVN_EDITOR=vim
+
 # Document Workspaces
 
 export DOCWORKSPACE="$HOME/Workspaces/IDEA-ws"
@@ -41,3 +43,6 @@ export JENKINS_HOME="$HOME/work/Gaia/Jenkins"
 
 alias dpce='ssh -x -A -F $HOME/.ssh/config gaiaro.n1data.lan'
 function dpcecp() { scp -F $HOME/.ssh/config gaiaro.n1data.lan:$*; }
+
+alias mdbexp='java -jar $PROGRAMS/Gaia/MDBExplorerStandalone.jar'
+alias mdbdict='java -jar $PROGRAMS/Gaia/GaiaMdbDictTool.jar'
