feat: env_global contains zsh and oh-my-zsh setup

--- a/env/.env_global
+++ b/env/.env_global
@@ -1,3 +1,27 @@
+# Path to your oh-my-zsh installation.
+  export ZSH="/home/tsagrista/.oh-my-zsh"
+
+# Set name of the theme to load. Optionally, if you set this to "random"
+# it'll load a random theme each time that oh-my-zsh is loaded.
+# See https://github.com/robbyrussell/oh-my-zsh/wiki/Themes
+#ZSH_THEME="maran"
+ZSH_THEME="gnzh"
+DEFAULT_USER=tsagrista
+
+# Which plugins would you like to load? (plugins can be found in ~/.oh-my-zsh/plugins/*)
+# Custom plugins may be added to ~/.oh-my-zsh/custom/plugins/
+# Example format: plugins=(rails git textmate ruby lighthouse)
+# Add wisely, as too many plugins slow down shell startup.
+plugins=( git fzf colorize vi-mode )
+
+source $ZSH/oh-my-zsh.sh
+
+# Add GPD
+export GPD_TTY=$(tty)
+
+# Disable zsh matching
+setopt +o nomatch
+
 #
 # ENVIRONMENT VARIABLES
 #
@@ -41,9 +65,14 @@ export RANGER_RELOAD_RC=FALSE
 export TERMINAL=termite
 export TERM=xterm-termite
 export BROWSER=qutebrowser
-export EDITOR=nvim
 GPG_TTY=$(tty)
 export GPG_TTY
+# Preferred editor for local and remote sessions
+ if [[ -n $SSH_CONNECTION ]]; then
+   export EDITOR='vim'
+ else
+   export EDITOR='nvim'
+ fi
 
 # My variables
 export PROGRAMS=$HOME/Programs
