--- a/env/.env_global
+++ b/env/.env_global
@@ -5,7 +5,7 @@
 # it'll load a random theme each time that oh-my-zsh is loaded.
 # See https://github.com/robbyrussell/oh-my-zsh/wiki/Themes
 #ZSH_THEME="maran"
-ZSH_THEME="gnzh"
+ZSH_THEME="ys"
 DEFAULT_USER=tsagrista
 
 # Which plugins would you like to load? (plugins can be found in ~/.oh-my-zsh/plugins/*)
