add weather full func

--- a/env/.env_global
+++ b/env/.env_global
@@ -156,6 +156,9 @@ alias sdisable='sudo systemctl disable'
 weather(){
     curl https://wttr.in/$1\?1Fn
 }
+wfull(){
+    curl https://wttr.in/$1
+}
 
 #
 # ENVIRONMENT INIT
