feat: change ~/git folder to ~/Projects

--- a/env/.env_global
+++ b/env/.env_global
@@ -31,10 +31,11 @@ export GPGKEY=448C2B189756743013D5F7C22FD2A59C1D734C1F
 
 # Git
 export PROGRAMS=$HOME/Programs
-export GIT=$HOME/git
-export TA=$GIT/time-analysis/src
-export TAR=$GIT/time-analysis-res/results
-export GS=$GIT/gaiasky
+export PROJ=$HOME/Projects
+export GIT=$PROJ
+export TA=$PROJ/time-analysis/src
+export TAR=$PROJ/time-analysis-res/results
+export GS=$PROJ/gaiasky
 export TOPCAT=$PROGRAMS/Topcat
 
 # Vulkan SDK
