feat: add  to env

--- a/env/.env_global
+++ b/env/.env_global
@@ -33,6 +33,7 @@ export GPGKEY=448C2B189756743013D5F7C22FD2A59C1D734C1F
 export PROGRAMS=$HOME/Programs
 export PROJ=$HOME/Projects
 export GIT=$PROJ
+export PROJECTS=$PROJ
 export TA=$PROJ/time-analysis/src
 export TAR=$PROJ/time-analysis-res/results
 export GS=$PROJ/gaiasky
