fix: correct key bindings for zsh

--- a/env/.env_global
+++ b/env/.env_global
@@ -161,6 +161,9 @@ wfull(){
     curl https://wttr.in/$1
 }
 
+# ZSH bindings
+[ -f ~/.dotfiles/env/.zsh_bindings ] && source ~/.dotfiles/env/.zsh_bindings
+
 #
 # ENVIRONMENT INIT
 #
