feat: add nnn config folder, add peertube to qtb

--- a/env/.env_global
+++ b/env/.env_global
@@ -29,8 +29,15 @@ setopt +o nomatch
 # GPG Key
 export GPGKEY=448C2B189756743013D5F7C22FD2A59C1D734C1F
 
-# Git
+# My variables
+ if [[ -n $SSH_CONNECTION ]]; then
+   export EDITOR='vim'
+ else
+   export EDITOR='nvim'
+ fi
+export PAGER=less
 export PROGRAMS=$HOME/Programs
+export GAMES=$PROGRAMS/Games
 export PROJ=$HOME/Projects
 export GIT=$PROJ
 export PROJECTS=$PROJ
@@ -38,6 +45,7 @@ export TA=$PROJ/time-analysis/src
 export TAR=$PROJ/time-analysis-res/results
 export GS=$PROJ/gaiasky
 export TOPCAT=$PROGRAMS/Topcat
+export PATH=$PATH:$HOME/.local/bin:$HOME/.dotfiles/bin:$HOME/.dotfiles/bin/sshfs:.
 
 # Vulkan SDK
 export VULKAN=$HOME/Workspaces/vulkan
@@ -47,8 +55,9 @@ export LD_LIBRARY_PATH=$VULKAN_SDK/lib
 export VK_LAYER_PATH=$VULKAN_SDK/etc/explicit_layer.d
 
 # NNN config
-export NNN_OPTS='cEnrx'
-export NNN_BMS='h:~/;d:~/Documents'
+export NNN_OPTS='cE'
+export NNN_OPENER=$HOME/.config/nnn/plugins/nuke
+export NNN_BMS='D:~/Documents;P:~/Projects'
 export NNN_COLORS='12345'
 export NNN_ARCHIVE='\\.(7z|bz2|gz|tar|tgz|zip)$'
 
@@ -68,18 +77,7 @@ export TERMINAL=termite
 export BROWSER=qutebrowser
 GPG_TTY=$(tty)
 export GPG_TTY
-# Preferred editor for local and remote sessions
- if [[ -n $SSH_CONNECTION ]]; then
-   export EDITOR='vim'
- else
-   export EDITOR='nvim'
- fi
 
-# My variables
-export PROGRAMS=$HOME/Programs
-export GAMES=$PROGRAMS/Games
-export PAGER=less
-export PATH=$PATH:$HOME/.local/bin:$HOME/.dotfiles/bin:$HOME/.dotfiles/bin/sshfs:.
 
 #
 # ALIASES
