--- a/env/.env_global
+++ b/env/.env_global
@@ -1,5 +1,29 @@
+#!/bin/bash
+
+#
+# USEFUL FUNCTIONS
+#
+
+# source files, if they exist
+function do-source {
+    if [ -f $1 ]; then
+        #echo "Sourcing $1"
+        source $1
+    else
+    fi
+}
+
+# Weather
+weather(){
+    curl https://wttr.in/$1\?1Fn
+}
+wfull(){
+    curl https://wttr.in/$1
+}
+
+# OH-MY-ZSH
 # Path to your oh-my-zsh installation.
-  export ZSH="/home/tsagrista/.oh-my-zsh"
+export ZSH="/home/tsagrista/.oh-my-zsh"
 
 # Set name of the theme to load. Optionally, if you set this to "random"
 # it'll load a random theme each time that oh-my-zsh is loaded.
@@ -14,13 +38,14 @@ DEFAULT_USER=tsagrista
 # Add wisely, as too many plugins slow down shell startup.
 plugins=( git fzf colorize vi-mode )
 
-source $ZSH/oh-my-zsh.sh
+do-source "$ZSH"/oh-my-zsh.sh
 
 # Add GPD
 export GPD_TTY=$(tty)
 
 # Disable zsh matching
 setopt +o nomatch
+
 
 #
 # ENVIRONMENT VARIABLES
@@ -38,6 +63,8 @@ export GPGKEY=448C2B189756743013D5F7C22FD2A59C1D734C1F
 export PAGER=less
 export PROGRAMS=$HOME/Programs
 export GAMES=$PROGRAMS/Games
+export DOTFILES=$HOME/.dotfiles
+export DOT=$DOTFILES
 export PROJ=$HOME/Projects
 export GIT=$PROJ
 export PROJECTS=$PROJ
@@ -55,11 +82,7 @@ export LD_LIBRARY_PATH=$VULKAN_SDK/lib
 export VK_LAYER_PATH=$VULKAN_SDK/etc/explicit_layer.d
 
 # NNN config
-export NNN_OPTS='cE'
-export NNN_OPENER=$HOME/.config/nnn/plugins/nuke
-export NNN_BMS='D:~/Documents;P:~/Projects'
-export NNN_COLORS='12345'
-export NNN_ARCHIVE='\\.(7z|bz2|gz|tar|tgz|zip)$'
+do-source "$DOTFILES"/nnn/conf.sh
 
 # Less
 export LESS=-R
@@ -151,13 +174,6 @@ alias sstop='sudo systemctl stop'
 alias senable='sudo systemctl enable'
 alias sdisable='sudo systemctl disable'
 
-# Weather
-weather(){
-    curl https://wttr.in/$1\?1Fn
-}
-wfull(){
-    curl https://wttr.in/$1
-}
 
 # ZSH bindings
 [ -f ~/.dotfiles/env/.zsh_bindings ] && source ~/.dotfiles/env/.zsh_bindings
