--- a/polybar/config
+++ b/polybar/config
@@ -59,12 +59,7 @@ padding-right = 1
 module-margin-left = 0
 module-margin-right = 1
 
-font-0 = "xos4 Terminus:style=Bold:size=12;0"
-font-1 = "Liberation Mono:size=10;1"
-font-2 = "Symbols Nerd Font:style=Regular:size=10;2"
-font-3 = "Font Awesome 5 Free:style=Regular:size=10;2"
-font-4 = "Font Awesome 5 Free:style=Solid:size=10;3"
-font-5 = "Font Awesome 5 Brands:style=Regular:size=10;4"
+font-0 = "TerminessTTF Nerd Font Mono:size=12;0"
 
 modules-left = i3 
 modules-center = xwindow-short
