--- a/env/.env_global
+++ b/env/.env_global
@@ -100,6 +100,11 @@ export BROWSER=qutebrowser
 GPG_TTY=$(tty)
 export GPG_TTY
 
+if command -v npm &> /dev/null
+then
+    export NODE_PATH=$(npm root -g)
+fi
+
 
 #
 # ALIASES
