feat: some changes

--- a/env/.env_global
+++ b/env/.env_global
@@ -178,6 +178,9 @@ alias sstop='sudo systemctl stop'
 alias senable='sudo systemctl enable'
 alias sdisable='sudo systemctl disable'
 
+# Radio, etc.
+alias catradio='mpv https://shoutcast.ccma.cat/ccma/catalunyaradioHD.mp3'
+
 
 # ZSH bindings
 [ -f ~/.dotfiles/env/.zsh_bindings ] && source ~/.dotfiles/env/.zsh_bindings
