--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -10,4 +10,6 @@ disable_ligatures   never
 scrollback_lines    50000
 scrollback_pager    less --chop-long-lines --RAW-CONTROL-CHARS +INPUT_LINE_NUMBER 
 
-background_opacity  0.7
+background_opacity  0.8
+include             ~/.cache/wal/colors-kitty.conf
+background          #000000
