--- a/env/.env_global
+++ b/env/.env_global
@@ -111,10 +111,10 @@ fi
 # 
 
 # Format for listings and directory usages
-alias ll='ls -alFthr --color=auto'
-alias ls='ls -a --color=auto'
-alias la='ls -Ahtr'
-alias l='ls -ChFtr'
+alias ll='ls -alFh --color=auto'
+alias la='ls -alFhS --color=auto'
+alias l='ls -lChFrS --color=auto'
+alias ls='ls -aF --color=auto'
 alias df='df -Th'
 alias du='du -h'
 alias cp='cp -i'
