--- a/env/.env_global
+++ b/env/.env_global
@@ -45,6 +45,10 @@ export GPD_TTY=$(tty)
 # Disable zsh matching
 setopt +o nomatch
 
+if which xdpyinfo >/dev/null; then
+    SCREEN_WIDTH=$(xdpyinfo | awk '/dimensions/{print $2}' | awk -F "x" '{print $1}')
+    SCREEN_HEIGHT=$(xdpyinfo | awk '/dimensions/{print $2}' | awk -F "x" '{print $2}')
+fi
 
 #
 # ENVIRONMENT VARIABLES
