--- a/polybar/config
+++ b/polybar/config
@@ -92,16 +92,11 @@ line-size = 1
 
 modules-center = xwindow
 
-; same as bar-hidpi but it shows ubuntu updates instead of arch
-[bar/bar-hidpi-ubuntu]
-inherit = bar/bar-hidpi
-modules-right = mpd xkeyboard updates-arch fs-hidalgo memory-info cpu temperature custom-bluetooth wlan-hidalgo eth backlight battery pulseaudio-tail popup-calendar nm-launcher powermenu
-
 ; same as other, but only show workspaces on slave bar
 [bar/bar-hidpi-slave]
 inherit = bar/bar-hidpi
 monitor = ${env:MONITOR:}
-modules-right = pulseaudio-tail popup-calendar 
+modules-right = pulseaudio popup-calendar 
 tray-position =
 
 [module/xwindow]
