--- a/env/.env_global
+++ b/env/.env_global
@@ -58,7 +58,7 @@ export GPGKEY=448C2B189756743013D5F7C22FD2A59C1D734C1F
  else
    export EDITOR='nvim'
  fi
-export PAGER=less
+export PAGER=bat
 export PROGRAMS=$HOME/Programs
 export GAMES=$PROGRAMS/Games
 export DOTFILES=$HOME/.dotfiles
