fix: fixes to change modes

--- a/env/.env_global
+++ b/env/.env_global
@@ -70,12 +70,12 @@ export TA=$PROJ/time-analysis/src
 export TAR=$PROJ/time-analysis-res/results
 export GS=$PROJ/gaiasky
 export TOPCAT=$PROGRAMS/Topcat
-export PATH=$PATH:$HOME/.local/bin:$HOME/.dotfiles/bin:$HOME/.dotfiles/bin/sshfs:.
+export PATH=$PATH:$HOME/.local/bin:$HOME/.dotfiles/bin:.
 
 # Vulkan SDK
 export VULKAN=$HOME/Workspaces/vulkan
 export VULKAN_SDK=$VULKAN/VulkanSDK/1.1.73.0/x86_64
-export PATH=$PATH:$VULKAN_SDK/bin
+#export PATH=$PATH:$VULKAN_SDK/bin
 export LD_LIBRARY_PATH=$VULKAN_SDK/lib
 export VK_LAYER_PATH=$VULKAN_SDK/etc/explicit_layer.d
 
