feat: add rac1 alias

--- a/env/.env_global
+++ b/env/.env_global
@@ -182,6 +182,7 @@ alias sdisable='sudo systemctl disable'
 
 # Radio, etc.
 alias catradio='mpv https://shoutcast.ccma.cat/ccma/catalunyaradioHD.mp3'
+alias rac1='mpv https://streaming.rac1.cat'
 
 
 # ZSH bindings
