--- a/ncmpcpp/config
+++ b/ncmpcpp/config
@@ -1,24 +1,38 @@
-ncmpcpp_directory = ~/.local/share/ncmpcpp
-lyrics_directory = ~/.local/share/ncmpcpp/lyrics
+ncmpcpp_directory = "~/.local/share/ncmpcpp"
+lyrics_directory = "~/.local/share/ncmpcpp/lyrics"
 
-[mdp]
-mpd_host = localhost
+## MPD
+mpd_host = "localhost"
 mpd_port = 6600
-mpd_music_dir = ~/Music
+mpd_music_dir = ~/Music"
 mpd_crossfade_time = 2
 
-[visualizer]
-visualizer_fifo_path = /tmp/mpd.fifo
-visualizer_output_name = mpd_fifo
-visualizer_in_stereo = no
-visualizer_sync_interval = 15
-visualizer_type = wave
-visualizer_look = ●▮
-visualizer_color = default
+## Visualizer
+visualizer_fifo_path = "/tmp/mpd.fifo"
+visualizer_output_name = "mpd_fifo"
+visualizer_in_stereo = "yes"
+visualizer_sync_interval = 30
+visualizer_type = "spectrum"
+visualizer_look = "+|"
+#visualizer_look = "◆▋"
+visualizer_color = blue, cyan, green, yellow, magenta, red
+#visualizer_color = 41, 83, 119, 155, 185, 215, 209, 203, 197, 161
 
-[global]
-colors_enabled = yes
-main_window_color = default
-centered_cursor = yes
-enable_window_title = yes
-external_editor = nvim
+## Interface
+autocenter_mode = "yes"
+progressbar_look = "=>-"
+#progressbar_look = "─⊙╶"
+
+## Visibility
+header_visibility = "yes"
+statusbar_visibility = "yes"
+titles_visibility = "yes"
+
+## Global
+system_encoding = "utf-8"
+regular_expressions = "extended"
+colors_enabled = "yes"
+main_window_color = "default"
+centered_cursor = "yes"
+enable_window_title = "yes"
+external_editor = "nvim"
