--- a/env/.env_global
+++ b/env/.env_global
@@ -35,7 +35,7 @@ DEFAULT_USER=tsagrista
 # Custom plugins may be added to ~/.oh-my-zsh/custom/plugins/
 # Example format: plugins=(rails git textmate ruby lighthouse)
 # Add wisely, as too many plugins slow down shell startup.
-plugins=( git fzf colorize vi-mode zsh-autosuggestions )
+plugins=( z git fzf colorize vi-mode zsh-autosuggestions )
 
 do-source "$ZSH"/oh-my-zsh.sh
 
