fix: picom config

--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -112,6 +112,13 @@ blur-background-exclude = [
 #       General Settings        #
 #################################
 
+# Unredirect all windows if a full-screen opaque window is detected, 
+# to maximize performance for full-screen windows. Known to cause flickering 
+# when redirecting/unredirecting windows.
+unredir-if-possible = false
+# Delay before unredirecting the window, in milliseconds. Defaults to 0.
+unredir-if-possible-delay = 1000
+
 # backend to use: "xrender" or "glx"
 # GLX much faster but depends on sane driver
 backend = "glx";
