fix: picom, add wimg for v3.wttr.in

--- a/env/.env_global
+++ b/env/.env_global
@@ -19,6 +19,9 @@ weather(){
 wfull(){
     curl https://wttr.in/$1
 }
+wimg(){
+    kitty icat https://v3.wttr.in/$1.png
+}
 
 # OH-MY-ZSH
 # Path to your oh-my-zsh installation.
